--- a/StandaloneFirefox/Dockerfile
+++ b/StandaloneFirefox/Dockerfile
@@ -2,8 +2,8 @@
 # NOTE: DO *NOT* EDIT THIS FILE.  IT IS GENERATED.
 # PLEASE UPDATE Dockerfile.txt INSTEAD OF THIS FILE
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-FROM seleniarm/node-firefox:4.0.0-beta-2-20210319
-LABEL authors=rows
+FROM alvarogg777/node-firefox:4.0.0-beta-4-20210610
+LABEL authors=SeleniumHQ
 
 USER 1200
 
@@ -17,5 +17,10 @@ COPY start-selenium-standalone.sh /opt/bin/start-selenium-standalone.sh
 #==============================
 COPY selenium.conf /etc/supervisor/conf.d/
 
+# Copying configuration script generator
+COPY generate_config /opt/bin/generate_config
+
+# Boolean value, maps "--relax-checks"
+ENV SE_RELAX_CHECKS true
 
 EXPOSE 4444
