--- a/NodeChromium/Dockerfile.txt
+++ b/NodeChromium/Dockerfile.txt
@@ -6,7 +6,7 @@ USER root
 #============================================
 RUN echo "deb http://http.us.debian.org/debian/ testing non-free contrib main" >> /etc/apt/sources.list \
   && apt-get update -qqy \
-  && apt-get -qqy install chromium=89.0.4389.82-1 \
+  && apt-get -qqy install chromium=90.0.4430.212-1 \
   && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
 #=================================
@@ -20,6 +20,6 @@ RUN /opt/bin/wrap_chromium_binary
 #============================================
 RUN apt-get update -qqy \
   && apt-get -qqy install chromium-driver \
-  && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
+  && rm -rf /var/lib/apt/lists/* /var/cache/apt/* && echo "chromium" >> /opt/selenium/browser_name
 
 USER 1200
