--- a/NodeFirefox/Dockerfile.txt
+++ b/NodeFirefox/Dockerfile.txt
@@ -14,15 +14,15 @@ ARG TARGETARCH
 #============
 # For arm64 we're sniffing a compatible binary out of an ubuntu package, don't look too hard!
 RUN if [ "$(TARGETARCH)" = "arm64" ]; then \
-    curl http://ports.ubuntu.com/pool/universe/f/firefox/firefox-geckodriver_75.0+build3-0ubuntu1_arm64.deb | dpkg-deb --fsys-tarfile - | tar -C / -x ./usr/bin/geckodriver; \
+    curl http://ports.ubuntu.com/pool/universe/f/firefox/firefox-geckodriver_89.0+build2-0ubuntu0.21.04.1_arm64.deb | dpkg-deb --fsys-tarfile - | tar -C / -x ./usr/bin/geckodriver; \
   else \
-    wget --no-verbose -O /tmp/geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.29.0/geckodriver-v0.29.0-linux64.tar.gz \
+    wget --no-verbose -O /tmp/geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.29.1/geckodriver-v0.29.1-linux64.tar.gz \
     && rm -rf /opt/geckodriver \
     && tar -C /opt -zxf /tmp/geckodriver.tar.gz \
     && rm /tmp/geckodriver.tar.gz \
-    && mv /opt/geckodriver /opt/geckodriver-$GK_VERSION \
-    && chmod 755 /opt/geckodriver-$GK_VERSION \
-    && ln -fs /opt/geckodriver-$GK_VERSION /usr/bin/geckodriver; \
+    && mv /opt/geckodriver /opt/geckodriver-0.29.1 \
+    && chmod 755 /opt/geckodriver-0.29.1 \
+    && ln -fs /opt/geckodriver-0.29.1 /usr/bin/geckodriver; \
   fi
 
 USER 1200
