--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -4,7 +4,7 @@
 version: "3"
 services:
   chrome:
-    image: selenium/node-chrome:4.0.0-beta-1-prerelease-20210210
+    image: alvarogg777/node-chrome:4.0.0-beta-3-20210422
     volumes:
       - /dev/shm:/dev/shm
     depends_on:
@@ -16,21 +16,21 @@ services:
     ports:
       - "6900:5900"
 
-  edge:
-    image: selenium/node-edge:4.0.0-beta-1-prerelease-20210210
-    volumes:
-      - /dev/shm:/dev/shm
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    ports:
-      - "6901:5900"
+#  edge:
+#    image: alvarogg777/node-edge:4.0.0-beta-3-20210422
+#    volumes:
+#      - /dev/shm:/dev/shm
+#    depends_on:
+#      - selenium-hub
+#    environment:
+#      - SE_EVENT_BUS_HOST=selenium-hub
+#      - SE_EVENT_BUS_PUBLISH_PORT=4442
+#      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+#    ports:
+#      - "6901:5900"
 
   firefox:
-    image: selenium/node-firefox:4.0.0-beta-1-prerelease-20210210
+    image: alvarogg777/node-firefox:4.0.0-beta-3-20210422
     volumes:
       - /dev/shm:/dev/shm
     depends_on:
@@ -42,21 +42,21 @@ services:
     ports:
       - "6902:5900"
 
-  opera:
-    image: selenium/node-opera:4.0.0-beta-1-prerelease-20210210
-    volumes:
-      - /dev/shm:/dev/shm
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    ports:
-      - "6903:5900"
+#  opera:
+#    image: alvarogg777/node-opera:4.0.0-beta-3-20210422
+#    volumes:
+#      - /dev/shm:/dev/shm
+#    depends_on:
+#      - selenium-hub
+#    environment:
+#      - SE_EVENT_BUS_HOST=selenium-hub
+#      - SE_EVENT_BUS_PUBLISH_PORT=4442
+#      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+#    ports:
+#      - "6903:5900"
 
   selenium-hub:
-    image: selenium/hub:4.0.0-beta-1-prerelease-20210210
+    image: alvarogg777/hub:4.0.0-beta-3-20210422
     container_name: selenium-hub
     ports:
       - "4442:4442"
