--- a/NodeFirefox/Dockerfile
+++ b/NodeFirefox/Dockerfile
@@ -2,7 +2,7 @@
 # NOTE: DO *NOT* EDIT THIS FILE.  IT IS GENERATED.
 # PLEASE UPDATE Dockerfile.txt INSTEAD OF THIS FILE
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-FROM alvarogg777/node-base:4.0.0-beta-4-20210627
+FROM alvarogg777/node-base:4.0.0-rc-1-20210903
 LABEL authors=SeleniumHQ
 
 USER root
