--- a/NodeChromium/Dockerfile.txt
+++ b/NodeChromium/Dockerfile.txt
@@ -20,7 +20,7 @@ RUN /opt/bin/wrap_chromium_binary
 #============================================
 RUN apt-get update -qqy \
   && apt-get -qqy install chromium-driver \
-  && rm -rf /var/lib/apt/lists/* /var/cache/apt/* && echo "chromium" >> /opt/selenium/browser_name
+  && rm -rf /var/lib/apt/lists/* /var/cache/apt/* ; ln -s /usr/bin/chromium /usr/bin/chrome ; echo "chrome" >> /opt/selenium/browser_name
 
 USER 1200
 
