--- a/NodeFirefox/Dockerfile
+++ b/NodeFirefox/Dockerfile
@@ -34,3 +34,4 @@ RUN if [ "$TARGETPLATFORM" = "arm64" ]; then \
 
 USER 1200
 COPY config.toml /opt/selenium/config.toml
+RUN echo "firefox" >> /opt/selenium/browser_name
