--- a/NodeChromium/config.toml
+++ b/NodeChromium/config.toml
@@ -11,4 +11,5 @@ max-sessions = 1
 [[node.driver-configuration]]
 name = "chrome"
 stereotype = '{"browserName": "chrome", "browserVersion": "91.0", "platformName": "Linux"}'
+display-name = "chromium"
 max-sessions = 25
