--- a/NodeFirefox/Dockerfile.txt
+++ b/NodeFirefox/Dockerfile.txt
@@ -13,17 +13,19 @@ ARG TARGETPLATFORM
 # GeckoDriver
 #============
 # For arm64 we're sniffing a compatible binary out of an ubuntu package, don't look too hard!
+# curl http://ports.ubuntu.com/pool/universe/f/firefox/firefox-geckodriver_75.0+build3-0ubuntu1_arm64.deb | dpkg-deb --fsys-tarfile - | tar -C / -x ./usr/bin/geckodriver; \
 RUN if [ "$TARGETPLATFORM" = "arm64" ]; then \
-    curl http://ports.ubuntu.com/pool/universe/f/firefox/firefox-geckodriver_75.0+build3-0ubuntu1_arm64.deb | dpkg-deb --fsys-tarfile - | tar -C / -x ./usr/bin/geckodriver; \
+    curl http://ports.ubuntu.com/pool/universe/f/firefox/firefox-geckodriver_93.0+build1-0ubuntu3_arm64.deb | dpkg-deb --fsys-tarfile - | tar -C / -x ./usr/bin/geckodriver; \
   else \
-    wget --no-verbose -O /tmp/geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.29.1/geckodriver-v0.29.1-linux64.tar.gz \
+    wget --no-verbose -O /tmp/geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.30.0/geckodriver-v0.30.0-linux64.tar.gz \
     && rm -rf /opt/geckodriver \
     && tar -C /opt -zxf /tmp/geckodriver.tar.gz \
     && rm /tmp/geckodriver.tar.gz \
-    && mv /opt/geckodriver /opt/geckodriver-0.29.1 \
-    && chmod 755 /opt/geckodriver-0.29.1 \
-    && ln -fs /opt/geckodriver-0.29.1 /usr/bin/geckodriver; \
+    && mv /opt/geckodriver /opt/geckodriver-0.30.0 \
+    && chmod 755 /opt/geckodriver-0.30.0 \
+    && ln -fs /opt/geckodriver-0.30.0 /usr/bin/geckodriver; \
   fi
 
 USER 1200
 COPY config.toml /opt/selenium/config.toml
+RUN echo "firefox" > /opt/selenium/browser_name
