--- a/NodeChromium/Dockerfile.txt
+++ b/NodeChromium/Dockerfile.txt
@@ -4,8 +4,13 @@ USER root
 # Chromium
 # Obtain Chromium version from: https://packages.debian.org/search?keywords=chromium
 #============================================
-RUN echo "deb http://http.us.debian.org/debian/ testing non-free contrib main" >> /etc/apt/sources.list \
-  && apt-get update -qqy \
+
+RUN apt-get -qqy update && apt-get install -y locales; locale-gen en_US.UTF-8 && DEBIAN_FRONTEND=noninteractive dpkg-reconfigure locales && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
+ENV LANGUAGE=en_US.UTF-8 LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
+#RUN echo "deb http://http.us.debian.org/debian/ testing non-free contrib main" >> /etc/apt/sources.list \
+#  && apt-get update -qqy \
+RUN apt-get update -qqy \
   && apt-get -qqy install chromium=93.0.4577.82-1 \
   && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
